apps/longhorn/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: longhorn-ui-virtualservice
spec:
  hosts:
    - longhorn.home.alden.ai
  gateways:
    - istio-system/default-https-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: longhorn-frontend.longhorn-system.svc.cluster.local
            port:
              number: 80
